# doc-classifier

./: README.md
backend/: 1.73.1  app.py  config.py  pyproject.toml
frontend/app/: page.tsx
